turtleart.smallsquare.SmallSquare.scala.error
Erreur de compilation :
SmallSquare:1: error: Missing closing brace `}' assumed here
override def run() {
^SmallSquare:1: error: expected start of definition
override def run() {
         ^