turtleart.smallsquare.SmallSquare.scala.code
override def run() {
  override def run() {
  baisseCrayon()
  for (compteur <- 1 to 4) {
  	avance(100)
    droite(90)
  }
}